Crash on startup #80804

Closed
opened 2020-09-15 13:23:27 +02:00 by Pavel Zimin · 27 comments

System Information
Operating system: Windows 7 sp1
Graphics card: AMD Radeon HD 6950

Blender Version
Broken: blender-2.91.0-60fee7832342-windows64
Worked: blender-2.91.0-c78c4252669a-windows64

Short description of error
Crash on startup. Report and sturtup file attached

Exact steps for others to reproduce the error
userpref.blend
blender.crash.txt

**System Information** Operating system: Windows 7 sp1 Graphics card: AMD Radeon HD 6950 **Blender Version** Broken: blender-2.91.0-60fee7832342-windows64 Worked: blender-2.91.0-c78c4252669a-windows64 **Short description of error** Crash on startup. Report and sturtup file attached **Exact steps for others to reproduce the error** [userpref.blend](https://archive.blender.org/developer/F8882821/userpref.blend) [blender.crash.txt](https://archive.blender.org/developer/F8882816/blender.crash.txt)
Author

Added subscriber: @ink4u4

Added subscriber: @ink4u4

#83919 was marked as duplicate of this issue

#83919 was marked as duplicate of this issue

#80941 was marked as duplicate of this issue

#80941 was marked as duplicate of this issue

Added subscriber: @De3n

Added subscriber: @De3n

Confirm this.
Operating system: Windows 10
Graphics card: AMD Radeon HD 7560D
Latest available drivers for this graphics card installed.

Broken: blender-2.91.0 SHA-1: 171b36683a
Worked: blender-2.91.0 SHA-1: 360489c751

Confirm this. Operating system: Windows 10 Graphics card: AMD Radeon HD 7560D Latest available drivers for this graphics card installed. Broken: blender-2.91.0 SHA-1: 171b36683a774d70a8f25529858b9c002a2a317e Worked: blender-2.91.0 SHA-1: 360489c75167d47653bc34ad9ba9a65076bf384c

Added subscriber: @costa

Added subscriber: @costa

I have crashes when opening specific files on this patch

I have crashes when opening specific files on this patch

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii

It seems that the crash occurs inside some gl function called in detect_mip_render_workaround.
@fclem, any idea what change in 171b36683a may have caused this problem?

It seems that the crash occurs inside some gl function called in `detect_mip_render_workaround`. @fclem, any idea what change in 171b36683a77 may have caused this problem?

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Richard Antalik self-assigned this 2020-09-17 16:59:36 +02:00

Thanks for the report. This GPU is below the minimum requirements for Blender, so there is no longer support for it. https://www.blender.org/download/requirements/

Installing the latest graphics driver sometimes helps to make such GPUs work, see here for more information. https://docs.blender.org/manual/en/dev/troubleshooting/gpu/index.html

If that doesn't help, you can use Blender 2.79: https://www.blender.org/download/previous-versions/

Thanks for the report. This GPU is below the minimum requirements for Blender, so there is no longer support for it. https://www.blender.org/download/requirements/ Installing the latest graphics driver sometimes helps to make such GPUs work, see here for more information. https://docs.blender.org/manual/en/dev/troubleshooting/gpu/index.html If that doesn't help, you can use Blender 2.79: https://www.blender.org/download/previous-versions/

One thing to note is that running using --debug-gpu-forceworkarounds or using the associated .bat file to launch blender will bypass this test. So you should be running fine.

However I don't know how/if we should always bypass this test for those hardware.

One thing to note is that running using `--debug-gpu-forceworkarounds` or using the associated `.bat` file to launch blender will bypass this test. So you should be running fine. However I don't know how/if we should always bypass this test for those hardware.
Author

@fclem nope, on the blender-2.91.0-27660b3cd90d-windows64 it dosn't work

blender.crash.txt

@fclem nope, on the blender-2.91.0-27660b3cd90d-windows64 it dosn't work [blender.crash.txt](https://archive.blender.org/developer/F8893424/blender.crash.txt)

In #80804#1017751, @mano-wii wrote:
It seems that the crash occurs inside some gl function called in detect_mip_render_workaround.

Yes it works in my case. if i delete this function( ) blender starts normally and without errors.

> In #80804#1017751, @mano-wii wrote: > It seems that the crash occurs inside some gl function called in `detect_mip_render_workaround`. Yes it works in my case. if i delete this function( ) blender starts normally and without errors.

Added subscribers: @Amit-12, @rjg

Added subscribers: @Amit-12, @rjg

Added subscriber: @KrossX

Added subscriber: @KrossX

Greetings, I checked the problem a bit since I also use a deprecated and unsupported Radeon gpu. I hope it's not a problem to comment on a closed issue.

The crash happens on glClear of detect_mip_render_workaround. As a workaround, I moved the check to the bottom so it's ran only if the flag is not set. Also set the flag for the Radeon driver. This is enough to avoid the startup crash and keep the cards usable before being blacklisted. Although since it's a driver problem there might be a crash elsewhere still, but I can see the cube and render it with cycles again! Yay!

old_radeon_crashfix.diff

Greetings, I checked the problem a bit since I also use a deprecated and unsupported Radeon gpu. I hope it's not a problem to comment on a closed issue. The crash happens on `glClear` of `detect_mip_render_workaround`. As a workaround, I moved the check to the bottom so it's ran only if the flag is not set. Also set the flag for the Radeon driver. This is enough to avoid the startup crash and keep the cards usable before being blacklisted. Although since it's a driver problem there might be a crash elsewhere still, but I can see the cube and render it with cycles again! Yay! [old_radeon_crashfix.diff](https://archive.blender.org/developer/F9401980/old_radeon_crashfix.diff)

Added subscriber: @invertex.color

Added subscriber: @invertex.color
Richard Antalik was unassigned by Daniil 2020-11-29 05:27:54 +01:00
KrossX was assigned by Daniil 2020-11-29 05:27:54 +01:00

In #80804#1064139, @KrossX wrote:
Greetings, I checked the problem a bit since I also use a deprecated and unsupported Radeon gpu. I hope it's not a problem to comment on a closed issue.

The crash happens on glClear of detect_mip_render_workaround. As a workaround, I moved the check to the bottom so it's ran only if the flag is not set. Also set the flag for the Radeon driver. This is enough to avoid the startup crash and keep the cards usable before being blacklisted. Although since it's a driver problem there might be a crash elsewhere still, but I can see the cube and render it with cycles again! Yay!

old_radeon_crashfix.diff

So, can you tell me please step by step what i need to do to run Blender without error?

> In #80804#1064139, @KrossX wrote: > Greetings, I checked the problem a bit since I also use a deprecated and unsupported Radeon gpu. I hope it's not a problem to comment on a closed issue. > > The crash happens on `glClear` of `detect_mip_render_workaround`. As a workaround, I moved the check to the bottom so it's ran only if the flag is not set. Also set the flag for the Radeon driver. This is enough to avoid the startup crash and keep the cards usable before being blacklisted. Although since it's a driver problem there might be a crash elsewhere still, but I can see the cube and render it with cycles again! Yay! > > [old_radeon_crashfix.diff](https://archive.blender.org/developer/F9401980/old_radeon_crashfix.diff) So, can you tell me please step by step what i need to do to run Blender without error?

Get the source code, apply diff, compile and voilà! I'll see about making a 2.91.0 build with the fix applied and post it, since compiling is quite involved with a big download and taking a loooong time.

Get the source code, apply diff, compile and voilà! I'll see about making a 2.91.0 build with the fix applied and post it, since compiling is quite involved with a big download and taking a loooong time.

Ok. Thanks!)

Ok. Thanks!)

Alright, here's a build for 2.91.0. Just backup the exe file in your install directory and extract this one there.

blender_2_91_0_exe.7z

Alright, here's a build for 2.91.0. Just backup the exe file in your install directory and extract this one there. [blender_2_91_0_exe.7z](https://archive.blender.org/developer/F9409418/blender_2_91_0_exe.7z)

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

@KrossX Thanks for patch, can you please send it via https://developer.blender.org/differential/diff/create/ ?
Then set @fclem or @Jeroen-Bakker as reviewer.

@KrossX Thanks for patch, can you please send it via https://developer.blender.org/differential/diff/create/ ? Then set @fclem or @Jeroen-Bakker as reviewer.

@KrossX Thanks! It's really works!

@KrossX **Thanks!** It's really works!

Added subscriber: @PiMaster06

Added subscriber: @PiMaster06
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80804
No description provided.